@@ -91,6 +91,7 @@ test_programs =					\
 	markup-escape-test			\
 	module-test				\
 	node-test				\
+	onceinit				\
 	option-test				\
 	patterntest				\
 	printf-test				\
@@ -163,6 +164,7 @@ markup_escape_test_LDADD = $(progs_ldadd)
 module_test_LDADD = $(module_ldadd) $(module_test_exp)
 module_test_LDFLAGS = $(G_MODULE_LDFLAGS)
 node_test_LDADD = $(progs_ldadd)
+onceinit_LDADD = $(thread_ldadd)
 option_test_LDADD = $(progs_ldadd)
 printf_test_LDADD = $(progs_ldadd)
 queue_test_LDADD = $(progs_ldadd)
