@@ -1,3 +1,8 @@
+Mon Aug 13 14:21:44 2007  Tim Janik  <timj@imendio.com>
+
+	* tests/onceinit.c: test g_once_init_*() before and after
+	g_thread_init() and test concurrency resolution.
+
 Mon Aug 13 14:18:22 2007  Tim Janik  <timj@imendio.com>
 
 	* glib/gthread.c (g_thread_create_full): prevent linking a freed
